# my_bot

./: CMakeLists.txt  package.xml
config/: drive_bot.rviz  view_bot.rviz
description/: gazebo_control.xacro  mash_robotcore.xacro  robot.urdf.xacro  robot_core.xacro
scripts/: path_following.py  tcpclient.py
worlds/: light.world
